--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,11 @@
           package="de.rndm.droidFaker"
           android:versionCode="1"
           android:versionName="1.0">
+
+    <!-- permissions -->
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <uses-sdk android:minSdkVersion="10"
             android:targetSdkVersion="13"/>
     <application android:label="@string/app_name"
