--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,8 +18,9 @@
     <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS" />
 
     <uses-sdk android:minSdkVersion="10"
-            android:targetSdkVersion="13"/>
+            android:targetSdkVersion="14"/>
     <application android:label="@string/app_name"
+                 android:allowBackup="true"
                  android:icon="@android:drawable/sym_def_app_icon">
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
