--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,8 @@
           android:versionName="1.0">
 
     <!-- permissions -->
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -18,7 +20,7 @@
     <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS" />
 
     <uses-sdk android:minSdkVersion="10"
-            android:targetSdkVersion="14"/>
+            android:targetSdkVersion="19"/>
     <application android:label="@string/app_name"
                  android:allowBackup="true"
                  android:icon="@android:drawable/sym_def_app_icon">
